k8s/04-analyzer-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: analyzer-service
  labels:
    app: analyzer
spec:
  type: NodePort
  ports:
    - targetPort: 80
      protocol: TCP
  selector:
    app: analyzer
