k8s/05-stats-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: stats-service
  labels:
    app: stats
spec:
  type: NodePort
  ports:
    - port: 80
      protocol: TCP
  selector:
    app: stats
