k8s/07-nsqlookupd-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nsqlookupd-service
  labels:
    app: nsqlookupd
spec:
  ports:
    - port: 4160
      name: tcp
    - port: 4161
      name: http
  selector:
    app: nsqlookupd
