k8s/08-nsqd-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nsqd-service
  labels:
    app: nsqd
spec:
  ports:
    - port: 4150
      name: tcp
    - port: 4151
      name: http
  selector:
    app: nsqd
